--- a/css/style.css
+++ b/css/style.css
@@ -14,31 +14,43 @@ html {
     content: "";
     display: table;
 }
-/* .container {
-    width: 99%;
-    max-width: 1280px;
-    margin: 0 auto;
 
-    height: 100%;
-} */
 img {
 	height: 100%;
-
+    
 }
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
+/* Titoli */
+h1 {
+    font-size: 5rem;
+    font-weight: 900;
+}
+h2 {
+    padding-left: 0.3rem;
+    font-size: 3rem;
+    font-weight: 900;
+    padding-bottom: 2rem;
+}
+
 .col-left {
     float: left;
 }
 .col-right {
     float: right;
 }
-.big-container {
+.large-container {
     width: 99%;
     max-width: 1450px;
     margin: 0 auto;
     padding: 3rem 0;
+}
+.skinny-container {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 8rem;
 }
 /* Buttoms */
 [class*="btn"] {
@@ -125,10 +137,6 @@ nav li a:hover::after {
     background-color: #b4d0e7;
     height: 750px;
 }
-h1 {
-    font-size: 5rem;
-    font-weight: 900;
-}
 .jumbo .clearfix {
     margin-top: 3rem;
 }
@@ -159,7 +167,53 @@ h1 {
     width: 100%;
     height: auto;
 }
-
-main{
-    padding: 0 40%;
+/* 
+main {
+    
+} */
+/* Radio button  */
+.radio-b {
+    position: relative;
+    margin-right: 1rem;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 1.3rem;
 }
+.radio-b input {
+    position: absolute;
+    opacity: 0;
+}
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #EEE;
+    border-radius: 50%;
+}
+.radio-b:hover input ~ .checkmark {
+    background-color: #CCC;
+}
+.radio-b input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.radio-b input:checked ~ .checkmark:after {
+    display: block;
+}
+.radio-b .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
+
+
