--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 html {
     font-family: 'Open Sans', sans-serif;
     font-size: 100%;
+    scroll-behavior: smooth;
 }
 .clearfix:after {
     clear: both;
@@ -22,6 +23,12 @@ img {
 a {
     text-decoration: none;
 }
+.a-dec {
+    text-decoration: underline;
+}
+.a-dec:hover{
+    text-decoration: none;
+}
 /* Titoli */
 h1 {
     font-size: 5rem;
@@ -33,7 +40,12 @@ h2 {
     font-weight: 900;
     padding-bottom: 2rem;
 }
-
+h3 {
+    font-size: 2rem;
+    font-weight: 800;
+    padding: 1rem 0;
+}
+/* Colomns */
 .col-left {
     float: left;
 }
@@ -80,6 +92,12 @@ h2 {
 [class^="blue-btn"]:hover {
     background-color: #44AAFF;
 }
+/* small line  */
+.small-line {
+    width: 15%;
+    border-bottom: 1px solid #DDD ;
+    margin: 3rem 0;
+}
 /* NAV  */
 nav {
     width: 100%;
@@ -89,6 +107,7 @@ nav {
     left: 0;
     padding: 0 1.7rem;
     background-color: white;
+    z-index: 10;
 }
 nav li, nav ul, nav img, nav a {
     list-style-type: none;
@@ -171,7 +190,7 @@ nav li a:hover::after {
 main {
     
 } */
-/* Radio button  */
+/* Radio button*/
 .radio-b {
     position: relative;
     margin-right: 1rem;
@@ -215,5 +234,65 @@ main {
     border-radius: 50%;
     background: white;
 }
+/* Tre colonne piano tariffario*/
+.three-col {
+    padding-top: 2rem;
+}
+.three-col .col-left, .three-col .col-right {
+    width: 30%;
+}
+.three-col .col-left {
+    margin-right: 5%;
+}
+.your-plane .three-col .col-left,.your-plane .three-col .col-right {
+    border: 1px solid #DDD;
+    height: 1080px;
+}
+.your-plane .plane-type {
+    text-align: center;
+    vertical-align: middle;
+    height: 2rem;
+    border-bottom: 1px solid #DDD;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.col-plane-content {
+    padding: 1.5rem;
+}
+.subtitle {
+    font-weight: 600;
+    padding: 0.5rem 0;
+}
+.tax {
+    color: #AAA;
+    margin-bottom: 4rem;
+}
+.vantage {
 
+    font-size: 1rem;
+    margin-bottom: 2rem;
+}
 
+.vantage li{
+    margin-left: -15px;
+    margin-bottom: 1rem; 
+
+}
+.col-plane-content .blue-btn-big{
+    width: 100%;
+    display: block;
+    margin-bottom: 2rem;
+}
+.highlights{
+    margin-top: 2rem;
+}
+
+.highlights li{
+    list-style: none;
+    margin-left: -15px;
+    margin-bottom: 1rem; 
+}
+.highlights li i{
+    color: #2196F3;
+
+}
